# ConceptsReview

./: .gitignore  .gitmodules  README.md  Untitled8.ipynb
Algorithms/algorithm-design/: .gitignore
Algorithms/algorithm-design/Arrays/: CMakeLists.txt  RunUniTests.bat  build.bat
Algorithms/algorithm-design/Arrays/ArraySandBox/: ArraySandBox.cpp  ArraySandBox.h  CMakeLists.txt  main.cpp
Algorithms/algorithm-design/Arrays/UnitTests/: ArraySandBoxTests.cpp  CMakeLists.txt
Algorithms/algorithm-design/DataStructure/: CMakeLists.txt  RunUniTests.bat  build.bat
Algorithms/algorithm-design/DataStructure/src/: CMakeLists.txt
Algorithms/algorithm-design/DataStructure/src/Arrays/: CMakeLists.txt
Algorithms/algorithm-design/DataStructure/src/Arrays/include/: Array.h
Algorithms/algorithm-design/DataStructure/src/Arrays/src/: Array.cpp
Algorithms/algorithm-design/DataStructure/src/Graphs/: CMakeLists.txt
Algorithms/algorithm-design/DataStructure/src/Graphs/include/: Graphs.h
Algorithms/algorithm-design/DataStructure/src/Graphs/src/: Graphs.cpp  HelperMethods.cpp
Algorithms/algorithm-design/DataStructure/src/HashTable/: CMakeLists.txt
Algorithms/algorithm-design/DataStructure/src/HashTable/include/: HashTables.h
Algorithms/algorithm-design/DataStructure/src/HashTable/src/: HashTables.cpp
Algorithms/algorithm-design/DataStructure/src/LambdaAndSTDFunctions/: CMakeLists.txt
Algorithms/algorithm-design/DataStructure/src/LambdaAndSTDFunctions/include/: LambdaAndSTDFunctions.h
Algorithms/algorithm-design/DataStructure/src/LambdaAndSTDFunctions/src/: LambdaAndSTDFunctions.cpp
Algorithms/algorithm-design/DataStructure/src/LlinkedLists/: CMakeLists.txt
Algorithms/algorithm-design/DataStructure/src/LlinkedLists/include/: LlinkedLists.h  NodeStructure.h
Algorithms/algorithm-design/DataStructure/src/LlinkedLists/src/: HelperMethods.cpp  LlinkedLists.cpp
Algorithms/algorithm-design/DataStructure/src/Queues/: CMakeLists.txt
Algorithms/algorithm-design/DataStructure/src/Queues/include/: Queues.h
Algorithms/algorithm-design/DataStructure/src/Queues/src/: Queues.cpp
Algorithms/algorithm-design/DataStructure/src/Stacks/: CMakeLists.txt
Algorithms/algorithm-design/DataStructure/src/Stacks/include/: Stacks.h
Algorithms/algorithm-design/DataStructure/src/Stacks/src/: Stacks.cpp
Algorithms/algorithm-design/DataStructure/src/Trees/: CMakeLists.txt
Algorithms/algorithm-design/DataStructure/src/Trees/include/: Trees.h
Algorithms/algorithm-design/DataStructure/src/Trees/src/: HelperMethods.cpp  Trees.cpp
Algorithms/algorithm-design/DataStructure/src/Vectors/: CMakeLists.txt
Algorithms/algorithm-design/DataStructure/src/Vectors/include/: Vectors.h
Algorithms/algorithm-design/DataStructure/src/Vectors/src/: Vectors.cpp
Algorithms/algorithm-design/DataStructure/tests/: ArrayTests.cpp  CMakeLists.txt  GraphsTests.cpp  HashTablesTests.cpp  LambdaAndSTDFunctionsTests.cpp  LlinkedListsTests.cpp  QueuesTests.cpp  StacksTests.cpp  TreesTests.cpp  VectorTests.cpp
C++/: .gitignore  Dockerfile  docker-compose.yaml
C++/src/Dev/HelloWorld/: CMakeLists.txt  build.sh  mock.sh
C++/src/Dev/HelloWorld/src/: Log.cpp  Log.h  Math.cpp  Static.cpp  main.cpp
C++/src/Dev/HelloWorld/src/Headers/: Log.h  Math.h
Cmake/: .gitignore
Cmake/Cmake Tutorial/: main.cpp
Cmake/Ctests/: CMakeLists.txt
Cmake/Ctests/Ctests/: CMakeLists.txt  Ctests.cpp  Ctests.h
Cmake/DemoBase/: CMakeLists.txt  DemoBase.cpp  DemoBase.h
Cmake/DemoBase/DemoBase/: CMakeLists.txt  DemoBase.cpp  DemoBase.h
Cmake/SomeLibDemo/: CMakeLists.txt
Cmake/SomeLibDemo/cpp/: adder.cpp
Cmake/Submodule/: CMakeLists.txt  build.bat  buildWin.bat  configure.bat  configureWin.bat  install.bat  main.cpp  run.bat  runWin.bat
Cmake/Submodule/Adder/: CmakeLists.txt
Cmake/TestSome/: CMakeLists.txt
Cmake/TestSome/cpp/: main.cpp
Cmake/Trim/: CmakeLists.txt  main.cpp
Cmake/test/: CMakeLists.txt  main.cpp
DockerImages/: Dockerfile  DockerfileRepositoryForCpp  docker-compose.yaml
Graphs/Graphs/: Graph.cpp  Graph.h  Graphs.sln  Graphs.vcxproj  Graphs.vcxproj.filters  Source.cpp  Student.cpp  Student.h
Graphs/GraphsUnitTests/: GraphTests.cpp  GraphsUnitTests.vcxproj  GraphsUnitTests.vcxproj.filters
HashTable/: HashTable.sln
HashTable/HashTable/: HashTable.vcxproj  HashTable.vcxproj.filters  HashTableFreeFunctions.cpp  HashTableFreeFunctions.h  HashTableFunctions.cpp  HashTableFunctions.h  main.cpp
HashTable/HashTableTests/: FreeFunctionTests.cpp  FreeFunctionWrapper.cpp  FreeFunctionWrapper.h  HashTable.cpp  HashTable.h  HashTableTests.vcxproj  HashTableTests.vcxproj.filters  MockWrapper.h
PLOT_Desenvolvimento da query para quantificar relação sobre figuras de mérito violadas.ipynb/: PLOT_Desenvolvimento da query para quantificar relação sobre figuras de mérito violadas.ipynb
Software Design/: Dockerfile  docker-compose.yaml
Software Design/src/: CmakeLists.txt  build.sh  mock.sh
Software Design/src/Procedural_Solution/: Circle.h  CmakeLists.txt
Software Design/src/src/OO/: oo_main.cpp
Software Design/src/src/Procedural_Solution/: Circle.cpp  Circle.h  DrawAllShapes.cpp  DrawAllShapes.h  DrawCircle.cpp  DrawCircle.h  DrawSquare.h  Shape.h  Square.cpp  Square.h  proc_main.cpp
Software Design/src/src/Visitor/: visitor_main.cpp
Sorting/: StudyRoadMap.txt
Sorting/TranspositionSorts/: Sortings.cpp  Sortings.h  TranspositionSorts.cpp  TranspositionSorts.sln  TranspositionSorts.vcxproj  TranspositionSorts.vcxproj.filters
UnitTestForFreeFunctions/: FreeFunction.cpp  FreeFunction.h  FreeFunctionWraper.cpp  FreeFunctionWraper.h  FreeFunctionWrapperImpl2.cpp  FreeFunctionWrapperImpl2.h  UnitTestForFreeFunctions.sln  UnitTestForFreeFunctions.vcxproj  UnitTestForFreeFunctions.vcxproj.filters
UnitTestForFreeFunctions/UnitTestForFreeFunctionsTests/: FreeFunctionTests.cpp  MockFreeFunctionUsingFunctionPointers.cpp  MockFreeFunctionWrapper.cpp  MockFreeFunctionWrapper.h  UnitTestForFreeFunctionsTests.vcxproj  UnitTestForFreeFunctionsTests.vcxproj.filters
(+36 files in other folders)
