# CMakeList.txt : CMake project for DemoBase, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("DemoBase")

# Add source to this project's executable.
add_executable (DemoBase "DemoBase.cpp" "DemoBase.h")

# TODO: Add tests and install targets if needed.
